tests/src/frontend/typechecking/invalid/type_switch_multi_pattern1.sk
base class B {
  children =
  | X()
  | Y()
  | Z()
}

fun shouldFail(): String {
  Y() match {
  | X() -> "One\n"
  | Y() -> "Two\n"
  | Z() -> "Three\n"
  }
}
